Fixed comment line wrap bug

--- a/src/pages/photobook.css
+++ b/src/pages/photobook.css
@@ -192,7 +192,6 @@
     margin-top: 50px;
     box-shadow: 5px 5px 0px white, 10px 10px 0px #2BFF7B;
     margin-bottom: 50px;
-    line-height: 10px;
     box-sizing: border-box;
 }
 
